spvd (0.8.0~dev-1) unstable; urgency=low

  * New upstream release.

 -- Rémi Cardona <remi.cardona@smartjog.com>  Wed, 12 May 2010 15:14:54 +0200

spvd (0.7.0-1) unstable; urgency=low

  [ Victor Goya ]
  * Update init script and default values to use logdir, refs: #2843.
  * Update minimal versions for plugins, refs: #2843.

  [ Rémi Cardona ]
  * Update packaging for Lenny.

  [ Gilles Dartiguelongue ]
  * New upstream release, closes: #2843, #2085, #2986, #2985, #3038, #3072.
  * Add missing txt2tags to Build-Depends.

 -- Gilles Dartiguelongue <gilles.dartiguelongue@smartjog.com>  Fri, 16 Apr 2010 18:08:01 +0200

spvd (0.6.2-2) unstable; urgency=low

  * Add Breaks since the API changed in an incompatible way.

 -- Gilles Dartiguelongue <gilles.dartiguelongue@smartjog.com>  Wed, 27 Jan 2010 17:33:27 +0100

spvd (0.6.2-1) unstable; urgency=low

  * New upstream release.

 -- Gilles Dartiguelongue <gilles.dartiguelongue@smartjog.com>  Tue, 26 Jan 2010 12:06:49 +0100

spvd (0.6.1) unstable; urgency=low

  [ Rémi Cardona ]
  * Added myself to Uploaders.

  [ Victor Goya ]
  * New upstream release.

 -- Victor Goya <victor.goya@smartjog.com>  Mon, 18 Jan 2010 17:00:06 +0100

spvd (0.6.0-1) unstable; urgency=low

  [ Nicolas Noirbent ]
  * New upstream release.
  * Removed python-psycopg2 from Depends since it is not needed anymore,
    and added it to the Suggests instead (tools/gis2spv.py seems to use
    it).

  [ Rémi Cardona ]
  * New upstream release, refs: #2825.

 -- Rémi Cardona <remi.cardona@smartjog.com>  Fri, 08 Jan 2010 17:14:40 +0100

spvd (0.5.0-1) unstable; urgency=low

  [ Victor Goya ]
  * New upstream release, closes: 2814, #2832.

  [ Rémi Cardona ]
  * Add support for DAEMONGROUP in spvd.default, closes: #2813.

 -- Nicolas Noirbent <nicolas.noirbent@smartjog.com>  Wed, 06 Jan 2010 12:15:57 +0100

spvd (0.4.0-1) unstable; urgency=low

  [ Thomas Souvignet ]
  * New upstream release, closes: #2643, #2644, #2645, #2613, #2641, #2655,